fix: icon size and textarea input alignment
Size of launch icon should by 60x60 pixels at most.
Align input text with placeholder text

--- a/css/atoms/show-dialog.css
+++ b/css/atoms/show-dialog.css
@@ -13,24 +13,12 @@
 
 @media all and (min-width: 47.9385em) {
   .chat-2-desk-popup-show {
-    height: 68px;
-    width: 68px;
+    height: 60px;
+    width: 60px;
   }
 
   .chat-2-desk-popup-show svg {
-    height: 68px;
-    width: 68px;
-  }
-}
-
-@media all and (min-width: 74.9375em) {
-  .chat-2-desk-popup-show {
-    height: 102px;
-    width: 102px;
-  }
-
-  .chat-2-desk-popup-show svg {
-    height: 102px;
-    width: 102px;
+    height: 60px;
+    width: 60px;
   }
 }
